--- a/climate.yaml
+++ b/climate.yaml
@@ -1,21 +1,21 @@
-- current_temperature_topic: smartthings/Thermostat/temperature
-  mode_command_topic: smartthings/Thermostat/thermostatMode
+- fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
+  name: Thermostat
+  fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
+  current_temperature_topic: smartthings/Thermostat/temperature
+  temperature_high_state_topic: smartthings/Thermostat/coolingSetpoint
+  temperature_low_command_topic: smartthings/Thermostat/heatingSetpoint
+  platform: mqtt
+  temp_step: 0.5
   modes:
   - 'off'
   - heat
   - cool
   - auto
-  mode_state_topic: smartthings/Thermostat/thermostatMode
-  temperature_high_command_topic: smartthings/Thermostat/coolingSetpoint
-  temperature_high_state_topic: smartthings/Thermostat/coolingSetpoint
-  temp_step: 0.5
-  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
-  fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
-  name: Thermostat
+  unique_id: thermostat
+  temperature_low_state_topic: smartthings/Thermostat/heatingSetpoint
   fan_modes:
   - auto
   - 'on'
-  temperature_low_state_topic: smartthings/Thermostat/heatingSetpoint
-  unique_id: thermostat
-  platform: mqtt
-  temperature_low_command_topic: smartthings/Thermostat/heatingSetpoint
+  mode_state_topic: smartthings/Thermostat/thermostatMode
+  temperature_high_command_topic: smartthings/Thermostat/coolingSetpoint
+  mode_command_topic: smartthings/Thermostat/thermostatMode
