--- a/lock.yaml
+++ b/lock.yaml
@@ -1,8 +1,8 @@
-- state_topic: smartthings/Front Door Lock/lock
-  retain: true
-  platform: mqtt
-  command_topic: smartthings/Front Door Lock/lock
+- unique_id: front_door_lock
   payload_lock: locked
-  unique_id: front_door_lock
-  name: Front Door Lock
   payload_unlock: unlocked
+  name: Front Door Lock
+  state_topic: smartthings/Front Door Lock/lock
+  command_topic: smartthings/Front Door Lock/lock
+  platform: mqtt
+  retain: true
