improve slack notification to include list of breaking changes

--- a/climate.yaml
+++ b/climate.yaml
@@ -1,21 +1,21 @@
-- fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
-  name: Thermostat
+- temp_step: 0.5
+  temperature_high_command_topic: smartthings/Thermostat/coolingSetpoint
+  mode_state_topic: smartthings/Thermostat/thermostatMode
   fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
-  current_temperature_topic: smartthings/Thermostat/temperature
-  temperature_high_state_topic: smartthings/Thermostat/coolingSetpoint
-  temperature_low_command_topic: smartthings/Thermostat/heatingSetpoint
-  platform: mqtt
-  temp_step: 0.5
   modes:
   - 'off'
   - heat
   - cool
   - auto
+  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
+  temperature_low_command_topic: smartthings/Thermostat/heatingSetpoint
+  current_temperature_topic: smartthings/Thermostat/temperature
+  temperature_high_state_topic: smartthings/Thermostat/coolingSetpoint
+  mode_command_topic: smartthings/Thermostat/thermostatMode
+  platform: mqtt
   unique_id: thermostat
+  name: Thermostat
   temperature_low_state_topic: smartthings/Thermostat/heatingSetpoint
   fan_modes:
   - auto
   - 'on'
-  mode_state_topic: smartthings/Thermostat/thermostatMode
-  temperature_high_command_topic: smartthings/Thermostat/coolingSetpoint
-  mode_command_topic: smartthings/Thermostat/thermostatMode
