--- a/automations.yaml
+++ b/automations.yaml
@@ -1,23 +1,21 @@
-- action:
-    service: rest_command.ir_send
+- id: ifttt_vacuum_control
+  initial_state: true
+  alias: IFTTT Vacuum Control
+  action:
     data_template:
-      blaster: '{{ trigger.json.blaster }}'
-      command: '{{ trigger.json.command }}'
       target: '{{ trigger.json.target }}'
+      command: '{{ trigger.json.command }}'
+      blaster: '{{ trigger.json.blaster }}'
+    service: rest_command.ir_send
   trigger:
     platform: webhook
     webhook_id: !secret 'webhook_vacuum'
-  initial_state: true
-  alias: IFTTT Vacuum Control
-  id: ifttt_vacuum_control
-- action:
-    service: notify.slack
-    data:
-      message: Update for Home Assistant is available.{{ '\n' }}{{ '\n' }}Potential
-        Breaking Changes:{{ '\n' }}```{{ states("sensor.potential_breaking_changes")
-        }}```
-  trigger:
-    entity_id: binary_sensor.updater
-    platform: state
+- id: notify_updates
   alias: Update Available Notifications
-  id: notify_updates
+  action:
+    data:
+      message: 'New HA version {{ state_attr(''binary_sensor.updater'',''newest_version'') }} is available.{{ ''\n'' }}{{ ''\n'' }}{% if states("sensor.potential_breaking_changes")|int > 0 %}{{ states("sensor.potential_breaking_changes") }} possible breaking changes:{{ ''\n'' }}```{% for k, v in states.sensor.potential_breaking_changes.attributes.items() %}{% if k not in ["friendly_name", "icon"] %}{{ k }}:{{ v }}{{ ''\n'' }}{% endif %}{% endfor %}```{% else %}No breaking changes detected.{% endif %}{{ ''\n'' }}{{ ''\n'' }}Raw: ```{{ states.sensor.potential_breaking_changes.attributes }}```'
+    service: notify.slack
+  trigger:
+    platform: state
+    entity_id: binary_sensor.updater
