--- a/binary_sensor.yaml
+++ b/binary_sensor.yaml
@@ -1,35 +1,35 @@
-- unique_id: living_room_sensor_motion
+- payload_off: inactive
+  device_class: motion
+  state_topic: smartthings/Living Room Sensor/motion
   payload_on: active
   name: Living Room Motion
-  state_topic: smartthings/Living Room Sensor/motion
   platform: mqtt
-  payload_off: inactive
+  unique_id: living_room_sensor_motion
+- payload_off: inactive
   device_class: motion
-- unique_id: master_bedroom_sensor_motion
+  state_topic: smartthings/Master Bedroom Sensor/motion
   payload_on: active
   name: Bedroom Motion
-  state_topic: smartthings/Master Bedroom Sensor/motion
   platform: mqtt
-  payload_off: inactive
-  device_class: motion
-- unique_id: front_door_lock_smoke
+  unique_id: master_bedroom_sensor_motion
+- payload_off: clear
+  device_class: smoke
+  state_topic: smartthings/Front Door Lock/smoke
   payload_on: detected
   name: Front Door Smoke
-  state_topic: smartthings/Front Door Lock/smoke
   platform: mqtt
-  payload_off: clear
-  device_class: smoke
-- unique_id: raman_home
+  unique_id: front_door_lock_smoke
+- payload_off: not present
+  device_class: presence
+  state_topic: smartthings/Raman/presence
   payload_on: present
   name: Raman Home Presence
-  state_topic: smartthings/Raman/presence
   platform: mqtt
-  payload_off: not present
+  unique_id: raman_home
+- payload_off: not present
   device_class: presence
-- unique_id: sherene_home
+  state_topic: smartthings/Sherene/presence
   payload_on: present
   name: Sherene Home Presence
-  state_topic: smartthings/Sherene/presence
   platform: mqtt
-  payload_off: not present
-  device_class: presence
+  unique_id: sherene_home
