--- a/binary_sensor.yaml
+++ b/binary_sensor.yaml
@@ -1,35 +1,35 @@
-- payload_off: inactive
+- platform: mqtt
+  name: Living Room Motion
+  unique_id: living_room_sensor_motion
   device_class: motion
   state_topic: smartthings/Living Room Sensor/motion
   payload_on: active
-  name: Living Room Motion
-  platform: mqtt
-  unique_id: living_room_sensor_motion
-- payload_off: inactive
+  payload_off: inactive
+- platform: mqtt
+  name: Bedroom Motion
+  unique_id: master_bedroom_sensor_motion
   device_class: motion
   state_topic: smartthings/Master Bedroom Sensor/motion
   payload_on: active
-  name: Bedroom Motion
-  platform: mqtt
-  unique_id: master_bedroom_sensor_motion
-- payload_off: clear
+  payload_off: inactive
+- platform: mqtt
+  name: Front Door Smoke
+  unique_id: front_door_lock_smoke
   device_class: smoke
   state_topic: smartthings/Front Door Lock/smoke
   payload_on: detected
-  name: Front Door Smoke
-  platform: mqtt
-  unique_id: front_door_lock_smoke
-- payload_off: not present
+  payload_off: clear
+- platform: mqtt
+  name: Raman Home Presence
+  unique_id: raman_home
   device_class: presence
   state_topic: smartthings/Raman/presence
   payload_on: present
-  name: Raman Home Presence
-  platform: mqtt
-  unique_id: raman_home
-- payload_off: not present
+  payload_off: not present
+- platform: mqtt
+  name: Sherene Home Presence
+  unique_id: sherene_home
   device_class: presence
   state_topic: smartthings/Sherene/presence
   payload_on: present
-  name: Sherene Home Presence
-  platform: mqtt
-  unique_id: sherene_home
+  payload_off: not present
