--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,61 +1,69 @@
-tts:
-- platform: google_translate
-sun:
-device_tracker: !include 'device_tracker.yaml'
-homeassistant:
-  customize: !include 'customize.yaml'
-  elevation: !secret 'elevation_home'
-  unit_system: imperial
-  name: Home
-  auth_providers:
-  - type: homeassistant
-  longitude: !secret 'long_home'
-  time_zone: America/New_York
-  latitude: !secret 'lat_home'
-group: !include 'groups.yaml'
-script: !include 'scripts.yaml'
-logbook:
-climate: !include 'climate.yaml'
-sensor: !include 'sensor.yaml'
+config:
 history:
-ssdp:
+logbook:
+map:
+mobile_app:
+system_log:
+system_health:
 recorder:
   purge_keep_days: 30
   purge_interval: 1
-lock: !include 'lock.yaml'
-asuswrt: !include 'asuswrt.yaml'
-roku: !include 'roku.yaml'
-zeroconf:
-media_player: !include 'media_player.yaml'
-automation: !include 'automations.yaml'
-hacs: !include 'hacs.yaml'
+  db_url: '!secret recorder_conn_str'
 influxdb:
-  username: !secret 'user_influx'
-  password: !secret 'pass_influx'
-lovelace:
-binary_sensor: !include 'binary_sensor.yaml'
-config:
-person: !include 'person.yaml'
-frontend: !include 'frontend.yaml'
-light: !include 'light.yaml'
-map:
-breaking_changes:
-system_health:
-conversation:
+  host: '!secret host_nas'
+  port: 8086
+  username: '!secret user_influx'
+  password: '!secret pass_influx'
+  database: '!secret db_influx'
+  default_measurement: state
+  tags_attributes: friendly_name
+homeassistant:
+  name: Home
+  latitude: '!secret lat_home'
+  longitude: '!secret long_home'
+  elevation: '!secret elevation_home'
+  unit_system: imperial
+  time_zone: America/New_York
+  customize: '!include customize.yaml'
+  auth_providers:
+  - type: homeassistant
+http:
+  ssl_certificate: /cert/fullchain.pem
+  ssl_key: /cert/privkey.pem
+  base_url: '!secret url_base'
+updater:
+  reporting: false
 discovery:
   ignore:
   - plex_mediaserver
   - roku
-http:
-  base_url: !secret 'url_base'
-  ssl_key: /cert/privkey.pem
-  ssl_certificate: /cert/fullchain.pem
-notify: !include 'notify.yaml'
-updater:
-  reporting: false
-zone: !include 'zones.yaml'
-rest_command: !include 'rest_command.yaml'
+ssdp:
+zeroconf:
+conversation:
+sun:
+lovelace:
+frontend: '!include frontend.yaml'
+weather: '!include weather.yaml'
+sensor: '!include sensor.yaml'
+media_player: '!include media_player.yaml'
+roku: '!include roku.yaml'
+lock: '!include lock.yaml'
+light: '!include light.yaml'
+climate: '!include climate.yaml'
+device_tracker: '!include device_tracker.yaml'
+rest_command: '!include rest_command.yaml'
+binary_sensor: '!include binary_sensor.yaml'
+notify: '!include notify.yaml'
+hacs: '!include hacs.yaml'
+breaking_changes:
+asuswrt: '!include asuswrt.yaml'
+person: '!include person.yaml'
+tts:
+- platform: google_translate
 mqtt:
-  broker: !secret 'host_mqtt'
-  port: !secret 'port_mqtt'
-weather: !include 'weather.yaml'
+  broker: '!secret host_mqtt'
+  port: '!secret port_mqtt'
+group: '!include groups.yaml'
+automation: '!include automations.yaml'
+script: '!include scripts.yaml'
+zone: '!include zones.yaml'
