--- a/lock.yaml
+++ b/lock.yaml
@@ -1,8 +1,8 @@
-- command_topic: smartthings/Front Door Lock/lock
-  state_topic: smartthings/Front Door Lock/lock
-  retain: true
-  payload_unlock: unlocked
+- platform: mqtt
   name: Front Door Lock
-  payload_lock: locked
-  platform: mqtt
   unique_id: front_door_lock
+  command_topic: smartthings/Front Door Lock/lock
+  state_topic: smartthings/Front Door Lock/lock
+  payload_lock: locked
+  payload_unlock: unlocked
+  retain: true
