--- a/media_player.yaml
+++ b/media_player.yaml
@@ -1,19 +1,19 @@
-- name: Living Room Kodi
-  platform: kodi
-  host: !secret 'host_living_room_shield'
-- name: Living Room ShieldTV
+- platform: kodi
+  name: Living Room Kodi
+  host: '!secret host_living_room_shield'
+- platform: androidtv
+  name: Living Room ShieldTV
+  host: '!secret host_living_room_shield'
   adbkey: /config/android/adbkey
-  platform: androidtv
-  host: !secret 'host_living_room_shield'
-- name: Bedroom Kodi
-  platform: kodi
-  host: !secret 'host_bedroom_firetv'
-- name: Bedroom FireTV
+- platform: kodi
+  name: Bedroom Kodi
+  host: '!secret host_bedroom_firetv'
+- platform: androidtv
+  name: Bedroom FireTV
+  host: '!secret host_bedroom_firetv'
   adbkey: /config/android/adbkey
-  platform: androidtv
-  host: !secret 'host_bedroom_firetv'
-- name: Living Room Sound Bar
-  device_class: soundbar
+- platform: vizio
+  name: Living Room Sound Bar
+  host: '!secret host_living_room_soundbar'
   suppress_warning: true
-  platform: vizio
-  host: !secret 'host_living_room_soundbar'
+  device_class: soundbar
