--- a/sensor.yaml
+++ b/sensor.yaml
@@ -1,4 +1,6 @@
-- forecast:
+- platform: darksky
+  api_key: '!secret api_darksky'
+  forecast:
   - 0
   - 1
   - 2
@@ -9,8 +11,6 @@
   - 7
   scan_interval:
     minutes: 15
-  platform: darksky
-  api_key: !secret 'api_darksky'
   monitored_conditions:
   - icon
   - precip_type
@@ -30,46 +30,48 @@
   - apparent_temperature_high
   - apparent_temperature_low
   - precip_intensity_max
-- server: home
-  password: !secret 'pass_plex'
+- platform: plex
   name: Plex Media Server
-  host: !secret 'host_living_room_shield'
-  platform: plex
-  username: !secret 'user_plex'
-  token: !secret 'token_plex'
+  server: home
+  host: '!secret host_living_room_shield'
+  token: '!secret token_plex'
+  username: '!secret user_plex'
+  password: '!secret pass_plex'
 - platform: kodi_recently_added
-  host: !secret 'host_nas'
+  host: '!secret host_nas'
 - platform: radarr_upcoming_media
-  api_key: !secret 'api_radarr'
-  host: !secret 'host_nas'
+  host: '!secret host_nas'
+  api_key: '!secret api_radarr'
 - platform: sonarr_upcoming_media
-  api_key: !secret 'api_sonarr'
-  host: !secret 'host_nas'
-- destination: !secret 'address_work_raman'
-  region: US
+  host: '!secret host_nas'
+  api_key: '!secret api_sonarr'
+- platform: waze_travel_time
   name: Raman Work Commute
-  realtime: true
-  platform: waze_travel_time
-  origin: !secret 'address_home'
-- destination: !secret 'address_home'
+  origin: '!secret address_home'
+  destination: '!secret address_work_raman'
   region: US
+  realtime: true
+- platform: waze_travel_time
   name: Raman Home Commute
-  realtime: true
-  platform: waze_travel_time
-  origin: !secret 'address_work_raman'
-- destination: !secret 'address_work_sherene'
+  origin: '!secret address_work_raman'
+  destination: '!secret address_home'
   region: US
+  realtime: true
+- platform: waze_travel_time
   name: Sherene Work Commute
-  realtime: true
-  platform: waze_travel_time
-  origin: !secret 'address_home'
-- destination: !secret 'address_home'
+  origin: '!secret address_home'
+  destination: '!secret address_work_sherene'
   region: US
-  name: Sherene Home Commute
   realtime: true
-  platform: waze_travel_time
-  origin: !secret 'address_work_sherene'
-- name: Pi-Hole
+- platform: waze_travel_time
+  name: Sherene Home Commute
+  origin: '!secret address_work_sherene'
+  destination: '!secret address_home'
+  region: US
+  realtime: true
+- platform: pi_hole
+  name: Pi-Hole
+  host: '!secret host_pihole'
   monitored_conditions:
   - ads_blocked_today
   - ads_percentage_today
@@ -80,65 +82,66 @@
   - unique_clients
   - unique_domains
   - clients_ever_seen
-  platform: pi_hole
-  host: !secret 'host_pihole'
-- device_class: battery
-  state_topic: smartthings/Front Door Lock/battery
+- platform: mqtt
   name: Front Door Lock Battery
   unique_id: front_door_lock_battery
-  platform: mqtt
   unit_of_measurement: '%'
-- device_class: battery
-  state_topic: smartthings/Living Room Sensor/battery
+  device_class: battery
+  state_topic: smartthings/Front Door Lock/battery
+- platform: mqtt
   name: Living Room Sensor Battery
   unique_id: living_room_sensor_battery
-  platform: mqtt
   unit_of_measurement: '%'
-- device_class: battery
-  state_topic: smartthings/Master Bedroom Sensor/battery
+  device_class: battery
+  state_topic: smartthings/Living Room Sensor/battery
+- platform: mqtt
   name: Master Bedroom Sensor Battery
   unique_id: master_bedroom_sensor_battery
-  platform: mqtt
   unit_of_measurement: '%'
-- device_class: humidity
-  state_topic: smartthings/Thermostat/humidity
+  device_class: battery
+  state_topic: smartthings/Master Bedroom Sensor/battery
+- platform: mqtt
   name: Thermostat Humidity
   unique_id: thermostat_humidity
-  platform: mqtt
   unit_of_measurement: '%'
-- device_class: humidity
-  state_topic: smartthings/Living Room Sensor/humidity
+  device_class: humidity
+  state_topic: smartthings/Thermostat/humidity
+- platform: mqtt
   name: Living Room Humidity
   unique_id: living_room_sensor_humidity
-  platform: mqtt
   unit_of_measurement: '%'
-- device_class: humidity
-  state_topic: smartthings/Master Bedroom Sensor/humidity
+  device_class: humidity
+  state_topic: smartthings/Living Room Sensor/humidity
+- platform: mqtt
   name: Master Bedroom Humidity
   unique_id: master_bedroom_sensor_humidity
-  platform: mqtt
   unit_of_measurement: '%'
-- device_class: temperature
-  state_topic: smartthings/Living Room Sensor/temperature
+  device_class: humidity
+  state_topic: smartthings/Master Bedroom Sensor/humidity
+- platform: mqtt
   name: Living Room Temperature
   unique_id: living_room_sensor_temperature
-  platform: mqtt
   unit_of_measurement: "\xB0F"
-- device_class: temperature
-  state_topic: smartthings/Master Bedroom Sensor/temperature
+  device_class: temperature
+  state_topic: smartthings/Living Room Sensor/temperature
+- platform: mqtt
   name: Master Bedroom Temperature
   unique_id: master_bedroom_sensor_temperature
-  platform: mqtt
   unit_of_measurement: "\xB0F"
-- device_class: illuminance
-  state_topic: smartthings/Living Room Sensor/illuminance
+  device_class: temperature
+  state_topic: smartthings/Master Bedroom Sensor/temperature
+- platform: mqtt
   name: Living Room Illuminance
   unique_id: living_room_sensor_illuminance
-  platform: mqtt
   unit_of_measurement: lm
-- device_class: illuminance
-  state_topic: smartthings/Master Bedroom Sensor/illuminance
+  device_class: illuminance
+  state_topic: smartthings/Living Room Sensor/illuminance
+- platform: mqtt
   name: Master Bedroom Illuminance
   unique_id: master_bedroom_sensor_illuminance
-  platform: mqtt
   unit_of_measurement: lm
+  device_class: illuminance
+  state_topic: smartthings/Master Bedroom Sensor/illuminance
+- platform: version
+  name: version
+  source: local
