--- a/zones.yaml
+++ b/zones.yaml
@@ -1,16 +1,16 @@
-- icon: mdi:home
-  elevation: !secret 'elevation_home'
-  name: Home
+- name: Home
+  latitude: '!secret lat_home'
+  longitude: '!secret long_home'
+  elevation: '!secret elevation_home'
   radius: 25
-  longitude: !secret 'long_home'
-  latitude: !secret 'lat_home'
+  icon: mdi:home
 - name: Raman Work
+  latitude: '!secret lat_work_raman'
+  longitude: '!secret long_work_raman'
   radius: 150
   icon: mdi:worker
-  latitude: !secret 'lat_work_raman'
-  longitude: !secret 'long_work_raman'
 - name: Sherene Work
+  latitude: '!secret lat_work_sherene'
+  longitude: '!secret long_work_sherene'
   radius: 100
   icon: mdi:worker
-  latitude: !secret 'lat_work_sherene'
-  longitude: !secret 'long_work_sherene'
