remove group logging to influx

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -17,6 +17,9 @@ influxdb:
   database: '!secret db_influx'
   default_measurement: state
   tags_attributes: friendly_name
+  exclude:
+    domains:
+    - group
 homeassistant:
   name: Home
   latitude: '!secret lat_home'
