--- a/configuration.yaml
+++ b/configuration.yaml
@@ -8,13 +8,13 @@ system_health:
 recorder:
   purge_keep_days: 30
   purge_interval: 1
-  db_url: '!secret recorder_conn_str'
+  db_url: !secret 'recorder_conn_str'
 influxdb:
-  host: '!secret host_nas'
+  host: !secret 'host_nas'
   port: 8086
-  username: '!secret user_influx'
-  password: '!secret pass_influx'
-  database: '!secret db_influx'
+  username: !secret 'user_influx'
+  password: !secret 'pass_influx'
+  database: !secret 'db_influx'
   default_measurement: state
   tags_attributes: friendly_name
   exclude:
@@ -22,18 +22,18 @@ influxdb:
     - group
 homeassistant:
   name: Home
-  latitude: '!secret lat_home'
-  longitude: '!secret long_home'
-  elevation: '!secret elevation_home'
+  latitude: !secret 'lat_home'
+  longitude: !secret 'long_home'
+  elevation: !secret 'elevation_home'
   unit_system: imperial
   time_zone: America/New_York
-  customize: '!include customize.yaml'
+  customize: !include 'customize.yaml'
   auth_providers:
   - type: homeassistant
 http:
   ssl_certificate: /cert/fullchain.pem
   ssl_key: /cert/privkey.pem
-  base_url: '!secret url_base'
+  base_url: !secret 'url_base'
 updater:
   reporting: false
 discovery:
@@ -45,28 +45,28 @@ zeroconf:
 conversation:
 sun:
 lovelace:
-frontend: '!include frontend.yaml'
-weather: '!include weather.yaml'
-sensor: '!include sensor.yaml'
-media_player: '!include media_player.yaml'
-roku: '!include roku.yaml'
-lock: '!include lock.yaml'
-light: '!include light.yaml'
-climate: '!include climate.yaml'
-device_tracker: '!include device_tracker.yaml'
-rest_command: '!include rest_command.yaml'
-binary_sensor: '!include binary_sensor.yaml'
-notify: '!include notify.yaml'
-hacs: '!include hacs.yaml'
+frontend: !include 'frontend.yaml'
+weather: !include 'weather.yaml'
+sensor: !include 'sensor.yaml'
+media_player: !include 'media_player.yaml'
+roku: !include 'roku.yaml'
+lock: !include 'lock.yaml'
+light: !include 'light.yaml'
+climate: !include 'climate.yaml'
+device_tracker: !include 'device_tracker.yaml'
+rest_command: !include 'rest_command.yaml'
+binary_sensor: !include 'binary_sensor.yaml'
+notify: !include 'notify.yaml'
+hacs: !include 'hacs.yaml'
 breaking_changes:
-asuswrt: '!include asuswrt.yaml'
-person: '!include person.yaml'
+asuswrt: !include 'asuswrt.yaml'
+person: !include 'person.yaml'
 tts:
 - platform: google_translate
 mqtt:
-  broker: '!secret host_mqtt'
-  port: '!secret port_mqtt'
-group: '!include groups.yaml'
-automation: '!include automations.yaml'
-script: '!include scripts.yaml'
-zone: '!include zones.yaml'
+  broker: !secret 'host_mqtt'
+  port: !secret 'port_mqtt'
+group: !include 'groups.yaml'
+automation: !include 'automations.yaml'
+script: !include 'scripts.yaml'
+zone: !include 'zones.yaml'
