--- a/media_player.yaml
+++ b/media_player.yaml
@@ -1,19 +1,19 @@
 - platform: kodi
   name: Living Room Kodi
-  host: '!secret host_living_room_shield'
+  host: !secret 'host_living_room_shield'
 - platform: androidtv
   name: Living Room ShieldTV
-  host: '!secret host_living_room_shield'
+  host: !secret 'host_living_room_shield'
   adbkey: /config/android/adbkey
 - platform: kodi
   name: Bedroom Kodi
-  host: '!secret host_bedroom_firetv'
+  host: !secret 'host_bedroom_firetv'
 - platform: androidtv
   name: Bedroom FireTV
-  host: '!secret host_bedroom_firetv'
+  host: !secret 'host_bedroom_firetv'
   adbkey: /config/android/adbkey
 - platform: vizio
   name: Living Room Sound Bar
-  host: '!secret host_living_room_soundbar'
+  host: !secret 'host_living_room_soundbar'
   suppress_warning: true
   device_class: soundbar
