--- a/zones.yaml
+++ b/zones.yaml
@@ -1,16 +1,16 @@
 - name: Home
-  latitude: '!secret lat_home'
-  longitude: '!secret long_home'
-  elevation: '!secret elevation_home'
+  latitude: !secret 'lat_home'
+  longitude: !secret 'long_home'
+  elevation: !secret 'elevation_home'
   radius: 25
   icon: mdi:home
 - name: Raman Work
-  latitude: '!secret lat_work_raman'
-  longitude: '!secret long_work_raman'
+  latitude: !secret 'lat_work_raman'
+  longitude: !secret 'long_work_raman'
   radius: 150
   icon: mdi:worker
 - name: Sherene Work
-  latitude: '!secret lat_work_sherene'
-  longitude: '!secret long_work_sherene'
+  latitude: !secret 'lat_work_sherene'
+  longitude: !secret 'long_work_sherene'
   radius: 100
   icon: mdi:worker
