add user/pass for transmission and add back DSM

--- a/sensor.yaml
+++ b/sensor.yaml
@@ -30,6 +30,23 @@
   - apparent_temperature_high
   - apparent_temperature_low
   - precip_intensity_max
+- platform: synologydsm
+  name: Diskstation
+  port: !secret 'port_ds'
+  host: !secret 'host_ds'
+  username: !secret 'user_ds'
+  password: !secret 'pass_ds'
+  monitored_conditions:
+  - cpu_total_load
+  - memory_real_usage
+  - disk_smart_status
+  - disk_exceed_bad_sector_thr
+  - disk_below_remain_life_thr
+  - disk_name
+  - disk_status
+  - volume_status
+  - volume_size_total
+  - volume_size_used
 - platform: plex
   name: Plex Media Server
   server: home
@@ -54,6 +71,8 @@
 - platform: transmission
   name: transmission
   host: !secret 'host_nas'
+  username: !secret 'user_transmission'
+  password: !secret 'pass_transmission'
   turtle_mode: true
   monitored_conditions:
   - current_status
