--- a/sensor.yaml
+++ b/sensor.yaml
@@ -185,3 +185,9 @@
 - platform: version
   name: version
   source: local
+- platform: version
+  name: local_ha_version
+  source: local
+- platform: version
+  name: available_ha_version
+  source: docker
