--- a/configuration.yaml
+++ b/configuration.yaml
@@ -67,6 +67,12 @@ tts:
 mqtt:
   broker: !secret 'host_mqtt'
   port: !secret 'port_mqtt'
+  birth_message:
+    topic: hass/status
+    payload: online
+  will_message:
+    topic: hass/status
+    payload: offline
 group: !include 'groups.yaml'
 automation: !include 'automations.yaml'
 script: !include 'scripts.yaml'
