--- a/device_tracker.yaml
+++ b/device_tracker.yaml
@@ -4,3 +4,13 @@
   new_device_defaults:
     track_new_devices: false
     hide_if_away: false
+- platform: icloud3
+  username: !secret 'user_icloud_raman'
+  password: !secret 'pass_icloud_raman'
+  account_name: raman_icloud
+  include_device_type: iphone
+  sensor_prefix_name: name
+  unit_of_measurement: mi
+  distance_method: waze
+  waze_realtime: true
+  waze_region: us
