add icloud device tracker to person

--- a/person.yaml
+++ b/person.yaml
@@ -3,6 +3,7 @@
   user_id: !secret 'user_id_raman'
   device_trackers:
   - device_tracker.ramansiphone
+  - device_tracker.ramans_iphone
 - name: Sherene
   id: sherene
   device_trackers:
