--- a/rest_command.yaml
+++ b/rest_command.yaml
@@ -1,3 +1,8 @@
 ir_send:
   url: !secret 'url_ir_send'
   method: POST
+kodi_send:
+  url: !secret 'url_kodi_send'
+  method: POST
+  payload: '{ kodiid: "{{ kodiid }}", token: "{{ token }}" }'
+  content_type: application/json
