--- a/rest_command.yaml
+++ b/rest_command.yaml
@@ -4,5 +4,5 @@ ir_send:
 kodi_send:
   url: !secret 'url_kodi_send'
   method: POST
-  payload: '{ kodiid: "{{ kodiid }}", token: "{{ token }}" }'
+  payload: '{"kodiid":"{{ kodiid }}","token":"{{ token }}" }'
   content_type: application/json
