--- a/automations.yaml
+++ b/automations.yaml
@@ -19,9 +19,9 @@
   action:
     service: rest_command.kodi_send
     data_template:
-      token: !secret 'webhook_ghkodi'
-      kodiid: '{{ trigger.json.id }}'
-      phrase: '{{ trigger.json.command }}'
+      token: '{{ trigger.json.token }}'
+      kodiid: '{{ trigger.json.kodiid }}'
+      phrase: '{{ trigger.json.phrase }}'
 - id: notify_updates
   alias: Update Available Notifications
   trigger:
